# PEPSGO

./: CMakeLists.txt  Makefile  README.md  fragments.Nmers  input.fasta  input.horiz  main.cc
demos/test0/: test0.cpp
demos/test0/input/: native.data
demos/test4/: test4.cpp
demos/test4/input/: native.data  sequence.fasta
demos/test5/: test5.cpp
demos/test5/input/: native.data  sequence.fasta
input/: fragments.Nmers  input.fasta  native.data  prediction.horiz  sequence.fasta
maps/bbdep/: SVCT.p
maps/bbind/: SVCT.p
src/: bbdep_sm.cc  bbdep_sm.hh  bbind.cc  bbind.hh  bbtools.cc  bbtools.hh  bbutils.cc  bbutils.hh  data_io.hh  data_writing.hh  dunbrackdata.cc  dunbrackdata.hh  fragment.cc  fragment.hh  get_dof.cc  get_dof.hh  implicit.hh  linterp.hh  main.cc  opt.cc  opt.hh  pepsgo.cc  pepsgo.hh  quantile.hh  transform.cc  transform.hh  trie.hh  trie_based.hh  trie_node.hh
